# sigProc

code/: CMakeLists.txt  cloc.sh
code/resources/: resources.qrc
code/src/: CMakeLists.txt  globals.cpp  globals.h  main.cpp
code/src/mainWindow/: CMakeLists.txt  mainWindow.cpp  mainWindow.h  mainWindow.ui
code/src/math/: CMakeLists.txt  utils.cpp  utils.h
code/src/math/fft/: CMakeLists.txt  fft.cpp  fft.h
code/src/nodes/: CMakeLists.txt  baseNode.cpp  baseNode.h  customNodePainter.cpp  customNodePainter.h  dynamicDataFlowGraphModel.cpp  dynamicDataFlowGraphModel.h  foreachNode.cpp  foreachNode.h  nodePort.cpp  nodePort.h
code/src/nodes/dataInputNodes/: CMakeLists.txt  fileDecoderNode.cpp  fileDecoderNode.h  fileLoader.h  generatorNode.cpp  generatorNode.h  inputFileNode.cpp  inputFileNode.h  inputFolderNode.cpp  inputFolderNode.h  objectCreateNode.h  waveformDataInputNode.cpp  waveformDataInputNode.h  waveformDataInputNode.ui
code/src/nodes/dataInputNodes/dataDecoders/: CMakeLists.txt  baseDecoder.cpp  baseDecoder.h  csvDecoder.h  wffDecoder.h
code/src/nodes/dataInputNodes/generators/: CMakeLists.txt  baseGenerator.cpp  baseGenerator.h  offsetGenerator.h  sineGenerator.h  squareGenerator.h
code/src/nodes/dataOutputNodes/: CMakeLists.txt  fileEncoderNode.cpp  fileEncoderNode.h  waveformDataOutputNode.cpp  waveformDataOutputNode.h  waveformDataOutputNode.ui
code/src/nodes/dataTypes/: CMakeLists.txt  arrayData.h  arrayDataType.cpp  arrayDataType.h  baseData.h  baseDataType.cpp  baseDataType.h  concepts.h  fileData.h  fileDataType.h  folderData.h  folderDataType.h  nodeDataType.h  nodeDataTypeType.h  objectData.h  objectDataType.h
code/src/nodes/fileNodes/: CMakeLists.txt  getFileNode.cpp  getFileNode.h
code/src/nodes/internalForeachNodes/: CMakeLists.txt  foreachInputNode.cpp  foreachInputNode.h  foreachInputNodeDataType.h  foreachOutputNode.cpp  foreachOutputNode.h
code/src/nodes/mathNodes/: CMakeLists.txt  fftNode.cpp  fftNode.h  fmModulationNode.cpp  fmModulationNode.h  mathNode.cpp  mathNode.h
code/src/nodes/objectNodes/: CMakeLists.txt  setFieldNode.cpp  setFieldNode.h
code/src/nodes/previewNodes/: CMakeLists.txt  graphPreviewNode.cpp  graphPreviewNode.h  previewNode.cpp  previewNode.h
code/src/threadPool/: CMakeLists.txt  threadPool.cpp  threadPool.h
code/src/utils/: CMakeLists.txt  concepts.h  stringType.h
(+11 files in other folders)
